--- a/about.html
+++ b/about.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="nav">
+            <h1 id="logo">LOGO</h1>
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="Shop.html">Shop</a></li>
+            </ul>
+        </div>
+    <h1>The Advanced Aqueducts Mission</h1>
+    <p>Advanced Aqueducts provides pristine plumbing systems to transport water and waste efficiently for our clients so as to keep them satisfied and in good health.</p>    
 </body>
 </html>
