--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
         </div>
         <div class="content">
             <h1>Advanced <strong>Aqueducts</strong></h1>
-            <p id="intro_to_company">Advanced aqueducts is a company that primarily focuses on selling pipes to those in need of replacements not only with better functionality than everything else within the market</p>
+            <p id="intro_to_company">Advanced aqueducts is a company that primarily focuses on selling pipe-related products to those in need of replacements not only with better functionality than everything else within the market, but also with the affordability that those truly in desperate need of better appliances for their plumbing system could actually utilize.</p>
             <button>Sign In</button>
             <button>Sign Out</button>
         </div>
