--- a/Shop.html
+++ b/Shop.html
@@ -45,6 +45,9 @@
             <button>Add to cart</button>
         </div>
     </section>
+    <div class="containerV2">
+
+    </div>
   </main>
 </body>
 </html>
