--- a/about.html
+++ b/about.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
     <div class="container">
         <div class="nav">
-            <h1 id="logo">LOGO</h1>
+            <img src="Screenshot 2024-07-15 at 11.32.49 AM.png" id="logo">
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -16,7 +17,7 @@
                 <li><a href="Shop.html">Shop</a></li>
             </ul>
         </div>
-    <h1>The Advanced Aqueducts Mission</h1>
-    <p>Advanced Aqueducts provides pristine plumbing systems to transport water and waste efficiently for our clients so as to keep them satisfied and in good health.</p>    
+    <h1 id="miss-stat">The Advanced Aqueducts Mission</h1>
+    <p id="miss-stat">Advanced Aqueducts provides pristine plumbing systems to transport water and waste efficiently for our clients so as to keep them satisfied and in good health.</p>    
 </body>
 </html>
